k8s/blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitops-example
  name: gitops-example-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitops-example
  template:
    metadata:
      labels:
        app: gitops-example
    spec:
      containers:
        - image: gcr.io/PROJECT_ID/IMAGE-blue:TAG
          name: gitops-example
          ports:
            - name: http
              containerPort: 8050
