k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitops-example
  name: gitops-example
spec:
  replicas: 5
  selector:
    matchLabels:
      app: gitops-example
  template:
    metadata:
      labels:
        app: gitops-example
    spec:
      containers:
        - image: gitops-example
          platform: linux/x86_64
          name: gitops-example
          ports:
            - name: http
              containerPort: 8050
