k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitops-example
  name: gitops-example
spec:
  ports:
    - name: http
      port: 8050
      targetPort: http
  selector:
    app: gitops-example
  type: LoadBalancer
